; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl1.c_gl1_load_texture_data.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl1.c_gl1_load_texture_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_NEAREST = common dso_local global i32 0, align 4
@GL_LINEAR = common dso_local global i32 0, align 4
@GL_UNPACK_ALIGNMENT = common dso_local global i32 0, align 4
@GL_TEXTURE_2D = common dso_local global i32 0, align 4
@GL_RGBA = common dso_local global i32 0, align 4
@RARCH_GL1_INTERNAL_FORMAT32 = common dso_local global i32 0, align 4
@RARCH_GL1_TEXTURE_TYPE32 = common dso_local global i32 0, align 4
@RARCH_GL1_FORMAT32 = common dso_local global i32 0, align 4
@GL_UNSIGNED_BYTE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32, i32, i32, i8*, i32)* @gl1_load_texture_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl1_load_texture_data(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i8* %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  store i32 %7, i32* %16, align 4
  %22 = call i32 (...) @video_driver_supports_rgba()
  store i32 %22, i32* %19, align 4
  %23 = load i32, i32* %16, align 4
  %24 = zext i32 %23 to i64
  %25 = icmp eq i64 %24, 4
  %26 = zext i1 %25 to i32
  store i32 %26, i32* %20, align 4
  %27 = load i32, i32* %10, align 4
  %28 = call i32 @gl1_wrap_type_to_enum(i32 %27)
  store i32 %28, i32* %21, align 4
  %29 = load i32, i32* %11, align 4
  switch i32 %29, label %34 [
    i32 129, label %30
    i32 128, label %30
    i32 130, label %33
    i32 131, label %33
  ]

30:                                               ; preds = %8, %8
  %31 = load i32, i32* @GL_NEAREST, align 4
  store i32 %31, i32* %18, align 4
  %32 = load i32, i32* @GL_NEAREST, align 4
  store i32 %32, i32* %17, align 4
  br label %37

33:                                               ; preds = %8, %8
  br label %34

34:                                               ; preds = %8, %33
  %35 = load i32, i32* @GL_LINEAR, align 4
  store i32 %35, i32* %18, align 4
  %36 = load i32, i32* @GL_LINEAR, align 4
  store i32 %36, i32* %17, align 4
  br label %37

37:                                               ; preds = %34, %30
  %38 = load i32, i32* %9, align 4
  %39 = load i32, i32* %21, align 4
  %40 = load i32, i32* %17, align 4
  %41 = load i32, i32* %18, align 4
  %42 = call i32 @gl1_bind_texture(i32 %38, i32 %39, i32 %40, i32 %41)
  %43 = load i32, i32* @GL_UNPACK_ALIGNMENT, align 4
  %44 = load i32, i32* %12, align 4
  %45 = call i32 @glPixelStorei(i32 %43, i32 %44)
  %46 = load i32, i32* @GL_TEXTURE_2D, align 4
  %47 = load i32, i32* %19, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %52, label %49

49:                                               ; preds = %37
  %50 = load i32, i32* %20, align 4
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %54, label %52

52:                                               ; preds = %49, %37
  %53 = load i32, i32* @GL_RGBA, align 4
  br label %56

54:                                               ; preds = %49
  %55 = load i32, i32* @RARCH_GL1_INTERNAL_FORMAT32, align 4
  br label %56

56:                                               ; preds = %54, %52
  %57 = phi i32 [ %53, %52 ], [ %55, %54 ]
  %58 = load i32, i32* %13, align 4
  %59 = load i32, i32* %14, align 4
  %60 = load i32, i32* %19, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %65, label %62

62:                                               ; preds = %56
  %63 = load i32, i32* %20, align 4
  %64 = icmp ne i32 %63, 0
  br i1 %64, label %67, label %65

65:                                               ; preds = %62, %56
  %66 = load i32, i32* @GL_RGBA, align 4
  br label %69

67:                                               ; preds = %62
  %68 = load i32, i32* @RARCH_GL1_TEXTURE_TYPE32, align 4
  br label %69

69:                                               ; preds = %67, %65
  %70 = phi i32 [ %66, %65 ], [ %68, %67 ]
  %71 = load i32, i32* %20, align 4
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %73, label %75

73:                                               ; preds = %69
  %74 = load i32, i32* @RARCH_GL1_FORMAT32, align 4
  br label %77

75:                                               ; preds = %69
  %76 = load i32, i32* @GL_UNSIGNED_BYTE, align 4
  br label %77

77:                                               ; preds = %75, %73
  %78 = phi i32 [ %74, %73 ], [ %76, %75 ]
  %79 = load i8*, i8** %15, align 8
  %80 = call i32 @glTexImage2D(i32 %46, i32 0, i32 %57, i32 %58, i32 %59, i32 0, i32 %70, i32 %78, i8* %79)
  ret void
}

declare dso_local i32 @video_driver_supports_rgba(...) #1

declare dso_local i32 @gl1_wrap_type_to_enum(i32) #1

declare dso_local i32 @gl1_bind_texture(i32, i32, i32, i32) #1

declare dso_local i32 @glPixelStorei(i32, i32) #1

declare dso_local i32 @glTexImage2D(i32, i32, i32, i32, i32, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
